--- a/layouts/shortcodes/cky-banner.html
+++ b/layouts/shortcodes/cky-banner.html
@@ -1,1 +1,3 @@
-<a class="cky-banner-element">{{ T "cookieSettings" }}</a>
+<button type="button" class="btn btn-primary cky-banner-element my-4">{{ T "cookieSettings" }}&nbsp;
+    <img src="https://cdn-cookieyes.com/assets/images/revisit.svg" alt="Revisit consent button">
+</button>
