--- a/layouts/shortcodes/cky-banner.html
+++ b/layouts/shortcodes/cky-banner.html
@@ -1,3 +1,3 @@
 <button type="button" class="btn btn-primary cky-banner-element my-4">{{ T "cookieSettings" }}&nbsp;
-    <img src="https://cdn-cookieyes.com/assets/images/revisit.svg" alt="Revisit consent button">
+    <img src="https://cdn-cookieyes.com/assets/images/revisit.svg" alt="{{ T "revisitConsent" }}">
 </button>
